# camke-doc

./: .gitignore  CMakeLists.txt  README.md
cmake/: Buildinfo.cmake
course/: 005.cmake  006.cmake
course/007/: CMakeLists.txt
course/007/sub/: CMakeLists.txt
course/008/: CMakeLists.txt
course/009/: string.cmake
docs/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: CMakeLists.txt  cmake.cpp
src/math/: CMakeLists.txt  math.cpp  math.h
src/zip/: CMakeLists.txt
test/: CMakeLists.txt
